# Gesture-Based-Mobile-Robot-Control-in-ROS

./: MobileBaseController.ino  README.md
mobile_robot/: CMakeLists.txt  package.xml
mobile_robot/launch/: gazebo_model.launch.py
mobile_robot/model/: robot.gazebo  robot.xacro
mobile_robot/parameters/: bridge_parameters.yaml
mobile_robot/scripts/: arduino_bridge.py
